# writer-bot

./: .copier-answers.yml  .dockerignore  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .yamllint.yml  Dockerfile  LICENSE  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sgconfig.yml  stories.py  wordcount.sh
.ast_grep/rules/: special-method-raises-notimplementederror.yml
.ast_grep/tests/: special-method-raises-notimplementederror-test.yml
.ast_grep/tests/__snapshots__/: special-method-raises-notimplementederror-snapshot.yml
.github/workflows/: ci.yml
.template_files/: npm_install_deps  npm_post_install  npm_update_deps  npm_update_node  pre_commit_install  pre_push  uv_install_deps  uv_latest_python.py  uv_post_install  uv_update_deps  uv_update_deps_internal.py  uv_update_python
src/writer_bot/: stories.py  utils.py
stubs/: urlextract.pyi
stubs/pyfakefs/: fake_filesystem.pyi
testdata/: test.txt  wordcount_good.sh  wordcount_negative.sh
tests/: conftest.py  stories_test.py  utils_test.py  wordcount_test.py
writer_bot/: stories.py  utils.py
